<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Esbee</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Hi! Esbee is a soundboard app that plays preloaded sounds. Try it!</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="title_activity_sound_library">SoundLibraryActivity</string>
    <string name="soundLibraryIntro">Choose a Present</string>
	<string name="present1">Drums</string>
	<string name="present2">Movies</string>
	<string name="present3">Digital</string>
	<string name="soundLibrary">Sound Library</string>
	<string name="stop">Stop</string>
</resources>
