<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SoundLibraryActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundLibraryIntro"
        android:textColor="#fff"
        android:textColorHint="#fff" />

    <Button
        android:id="@+id/present1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="27dp"
        android:text="@string/present1"
        android:textColor="#fff" />

    <Button
        android:id="@+id/present2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/present1"
        android:layout_below="@+id/present1"
        android:text="@string/present2"
        android:textColor="#fff" />

    <Button
        android:id="@+id/present3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/present2"
        android:layout_alignRight="@+id/present2"
        android:layout_below="@+id/present2"
        android:text="@string/present3"
        android:textColor="#fff" />

</RelativeLayout>